--- a/style.css
+++ b/style.css
@@ -46,17 +46,16 @@ body {
 /* layout */
 .header {
   background-image: url(./images/pattern-bg.png);
-  padding: 3rem 0;
+  padding: 1rem 0 10rem 0;
+  position: relative;
 }
 
 .header .container {
-  /* width: min(90%, 500px); */
-  /* margin: 0 auto; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1.5rem;
+  gap: 0.5rem;
 }
 
 form {
@@ -68,7 +67,7 @@ form {
 .result-modal {
   background: var(--light);
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
-  width: min(90%, 500px);
+  width: min(90%, 800px);
   margin: 0 auto;
   padding: 1rem;
   border-radius: var(--radius);
@@ -76,11 +75,39 @@ form {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+}
+
+@media (min-width: 48em) {
+  .result-modal {
+    flex-direction: row;
+    /* justify-content: space-between; */
+    align-items: flex-start;
+    gap: 2rem;
+  }
+
+  .result-modal div:not(:last-child) {
+    border-right: 1px solid var(--dark-gray);
+    padding-right: 1.5rem;
+  }
+}
+
+.result-modal div {
+  text-align: center;
 }
 
 .result-modal p {
   color: var(--dark-gray);
+  margin-bottom: 0.3rem;
+}
+
+.result-modal h3 {
+  color: var(--very-dark-gray);
+  font-weight: 500;
 }
 
 /*====
