--- a/style.css
+++ b/style.css
@@ -37,57 +37,69 @@ body {
   font-family: var(--font-family);
 }
 
-/* typograghpy */
+/*===
+TYPOGRAPHY
+===*/
 .title {
   color: var(--light);
   font-weight: 400;
 }
 
-/* layout */
+/*===
+LAYOUT
+===*/
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .header {
   background-image: url(./images/pattern-bg.png);
-  padding: 1rem 0 10rem 0;
+  padding: 1rem 0 8rem 0;
   position: relative;
 }
 
 .header .container {
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 0.5rem;
 }
 
 form {
-  display: flex;
-  align-items: center;
   width: min(90%, 500px);
 }
 
 .result-modal {
   background: var(--light);
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
-  width: min(90%, 800px);
+  width: min(90%, 900px);
   margin: 0 auto;
   padding: 1rem;
   border-radius: var(--radius);
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 1rem;
   position: absolute;
   left: 0;
   right: 0;
-  top: 50%;
+  top: calc(50% + 1rem);
+  z-index: 999;
+}
+
+.result-modal.display {
+  display: block;
 }
 
 @media (min-width: 48em) {
+  .header {
+    padding: 1rem 0 6rem 0;
+  }
+
   .result-modal {
     flex-direction: row;
-    /* justify-content: space-between; */
     align-items: flex-start;
     gap: 2rem;
+    padding: 2rem 1rem;
+    top: calc(50% + 2rem);
   }
 
   .result-modal div:not(:last-child) {
@@ -108,6 +120,10 @@ form {
 .result-modal h3 {
   color: var(--very-dark-gray);
   font-weight: 500;
+}
+
+#map {
+  height: 400px;
 }
 
 /*====
@@ -140,4 +156,10 @@ COMPONENTS
   cursor: pointer;
   padding-top: 1rem;
   padding-bottom: 1.18rem;
+}
+
+@media (hover: hover) {
+  .submit-btn:hover {
+    background-color: var(--dark-gray);
+  }
 }
