--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ TYPOGRAPHY
 /*===
 LAYOUT
 ===*/
+
 .flex {
   display: flex;
   align-items: center;
@@ -74,7 +75,7 @@ form {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
   width: min(90%, 900px);
   margin: 0 auto;
-  padding: 1rem;
+  padding: 1.3rem 1rem;
   border-radius: var(--radius);
   flex-direction: column;
   gap: 1rem;
@@ -123,7 +124,7 @@ form {
 }
 
 #map {
-  height: 400px;
+  height: 25rem;
 }
 
 /*====
@@ -162,4 +163,9 @@ COMPONENTS
   .submit-btn:hover {
     background-color: var(--dark-gray);
   }
+}
+
+.attribution {
+  text-align: center;
+  padding: 1rem 0;
 }
